# grip-aidata-push-tmp

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  push_result_setup.sql  start_dashboard.sh  대시보드_이용가이드.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/models/: responses.py
backend/app/routes/: __init__.py
backend/app/routes/v1/: ab_test.py  allocations.py  cluster_snapshot.py  cluster_users.py  jobs.py  meta.py  push_results.py
backend/app/services/: ab_test.py  allocation_svc.py  cluster_users.py  jobs.py  push_funnel.py  push_mapping.py  push_results.py  segment_conversion.py  snapshot.py
core/datasources/: snowflake_kp.py
core/push/: allocation.py  artifacts.py  audience.py  clustering.py  descriptions.py  features.py  paths.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AbTestSection.tsx  ClusterUserSample.tsx  SegmentShareChart.tsx
frontend/src/hooks/: useJobPolling.ts
frontend/src/pages/: AllocationPage.tsx  ClusterSnapshotPage.tsx  PushResultsPage.tsx
frontend/src/services/: pushService.ts
frontend/src/types/: push.ts
