[project]
name = "push-dashboard-backend"
version = "0.1.0"
description = "푸시 클러스터 운영 도구 백엔드 (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "kmodes>=0.12",
    "snowflake-connector-python>=3.12",
    "pyarrow>=16",
    "cryptography>=42",
    "python-dotenv>=1.0",
]

[tool.ruff]
line-length = 120
